[project]
name = "employee_api"
version = "0.1.0"
description = "Employee API"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Your Name"}]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "email-validator>=2.1.0.post1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
  "black>=24.0.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.8.0",
  "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:fastapi._compat.v1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
